--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.2",
+    "@types/styled-components": "^5.1.12",
+    "@types/styled-components-react-native": "^5.1.1",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "graphql": "^15.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.12.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.0",
+    "styled-components-react-native": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
