--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.5",
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.2",
     "@types/styled-components": "^5.1.12",
