--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
+    "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.1",
     "react": "16.13.1",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.12.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
     "styled-components-react-native": "^1.0.0"
