--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
+    "react-spring": "^9.0.0-rc.3",
     "save": "^2.4.0",
     "styled-components": "^5.3.0",
-    "styled-components-react-native": "^1.0.0"
+    "styled-components-react-native": "^1.0.0",
+    "svg-path-properties": "^1.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
