--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/styled-components-react-native": "^5.1.1",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-camera": "~11.2.2",
+    "expo-face-detector": "~10.1.1",
     "expo-font": "~9.2.1",
+    "expo-keep-awake": "~9.2.0",
     "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.1",
@@ -28,7 +31,6 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
-    "react-native-redash": "^16.2.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-spring": "^9.0.0-rc.3",
