--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "save": "^2.4.0",
     "styled-components": "^5.3.0",
     "styled-components-react-native": "^1.0.0",
+    "subscriptions-transport-ws": "^0.9.19",
     "svg-path-properties": "^1.0.11"
   },
   "devDependencies": {
