--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^6.0.2",
     "@types/styled-components": "^5.1.12",
     "@types/styled-components-react-native": "^5.1.1",
+    "browserslist": "^4.16.8",
+    "caniuse-lite": "^1.0.30001252",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-camera": "~11.2.2",
