--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~9.2.1",
     "expo-keep-awake": "~9.2.0",
     "expo-linear-gradient": "~9.2.0",
+    "expo-notifications": "~0.12.3",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.1",
     "moment": "^2.29.1",
