--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/styled-components": "^5.1.12",
     "@types/styled-components-react-native": "^5.1.1",
     "browserslist": "^4.16.8",
-    "caniuse-lite": "^1.0.30001252",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-camera": "~11.2.2",
@@ -33,6 +32,7 @@
     "react-hook-form": "^7.12.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal": "^13.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-spring": "^9.0.0-rc.3",
