--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@react-navigation/stack": "^6.0.2",
     "@types/styled-components": "^5.1.12",
     "@types/styled-components-react-native": "^5.1.1",
+    "apollo-upload-client": "^16.0.0",
     "browserslist": "^4.16.8",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-camera": "~11.2.2",
     "expo-face-detector": "~10.1.1",
     "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
     "expo-keep-awake": "~9.2.0",
     "expo-linear-gradient": "~9.2.0",
+    "expo-media-library": "~12.1.2",
     "expo-notifications": "~0.12.3",
     "expo-status-bar": "~1.0.4",
     "graphql": "^15.5.1",
@@ -32,6 +35,7 @@
     "react-hook-form": "^7.12.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.4",
     "react-native-modal": "^13.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
@@ -44,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/apollo-upload-client": "^14.1.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "typescript": "~4.0.0"
