--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@apollo/client": "^3.4.5",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-navigation/bottom-tabs": "^6.0.3",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.2",
     "@types/styled-components": "^5.1.12",
@@ -40,6 +41,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-crop-picker": "^0.36.4",
     "react-native-modal": "^13.0.0",
+    "react-native-reanimated": "^2.2.3",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-spring": "^9.0.0-rc.3",
