--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.12",
     "@types/styled-components-react-native": "^5.1.1",
     "apollo-upload-client": "^16.0.0",
+    "browser-image-compression": "^1.0.16",
     "browserslist": "^4.16.8",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
