--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase": "8.2.3",
     "graphql": "^15.5.1",
     "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.12.2",
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/apollo-upload-client": "^14.1.0",
+    "@types/moment-duration-format": "^2.2.3",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "typescript": "~4.0.0"
