--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.5",
-    "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-navigation/bottom-tabs": "^6.0.3",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.2",
@@ -34,6 +34,7 @@
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "graphql": "^15.5.1",
+    "lottie-react-native": "^5.0.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "react": "16.13.1",
