--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "SWITH",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon1.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -15,9 +15,14 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.chickenbumps.swith",
+      "buildNumber": "1.0.0",
+      "icon": "./assets/icon1.png"
     },
     "android": {
+      "package": "com.chickenbumps.swith",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
