--- a/package.json
+++ b/package.json
@@ -8,58 +8,64 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.5",
-    "@react-native-async-storage/async-storage": "^1.15.11",
-    "@react-navigation/bottom-tabs": "^6.0.3",
-    "@react-navigation/drawer": "^6.1.8",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/stack": "^6.0.2",
-    "@types/styled-components": "^5.1.12",
-    "@types/styled-components-react-native": "^5.1.1",
-    "apollo-upload-client": "^16.0.0",
-    "browser-image-compression": "^1.0.16",
-    "browserslist": "^4.16.8",
-    "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
-    "expo-camera": "~11.2.2",
-    "expo-face-detector": "~10.1.1",
-    "expo-font": "~9.2.1",
-    "expo-image-picker": "~10.2.2",
-    "expo-keep-awake": "~9.2.0",
-    "expo-linear-gradient": "~9.2.0",
-    "expo-media-library": "~12.1.2",
-    "expo-notifications": "~0.12.3",
+    "@apollo/client": "^3.5.10",
+    "@babel/preset-typescript": "^7.16.7",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/bottom-tabs": "^6.0.8",
+    "@react-navigation/drawer": "^6.0.8",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.0.8",
+    "@types/styled-components": "^5.1.24",
+    "@types/styled-components-react-native": "^5.1.3",
+    "apollo-upload-client": "^17.0.0",
+    "browser-image-compression": "^1.0.17",
+    "browserslist": "^4.20.2",
+    "expo": "~44.0.6",
+    "expo-app-loading": "~1.3.0",
+    "expo-camera": "~12.1.2",
+    "expo-face-detector": "~11.1.3",
+    "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
+    "expo-keep-awake": "~10.0.1",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-media-library": "~14.0.0",
+    "expo-notifications": "~0.14.0",
     "expo-server-sdk": "^3.6.0",
-    "expo-sms": "~9.2.3",
-    "expo-status-bar": "~1.0.4",
-    "graphql": "^15.5.1",
-    "lottie-react-native": "^5.0.0",
+    "expo-sms": "~10.1.0",
+    "expo-status-bar": "~1.2.0",
+    "graphql": "^16.3.0",
+    "lottie-react-native": "5.0.1",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-hook-form": "^7.12.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-image-crop-picker": "^0.36.4",
-    "react-native-modal": "^13.0.0",
-    "react-native-reanimated": "^2.2.3",
-    "react-native-svg": "^12.1.1",
-    "react-native-web": "~0.13.12",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-hook-form": "^7.28.1",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-crop-picker": "^0.37.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.1",
     "save": "^2.4.0",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.5",
     "styled-components-react-native": "^1.0.0",
     "subscriptions-transport-ws": "^0.9.19",
     "svg-path-properties": "^1.0.11",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "expo-updates": "~0.11.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/apollo-upload-client": "^14.1.0",
+    "@babel/core": "^7.12.9",
+    "@types/apollo-upload-client": "^17.0.0",
     "@types/moment-duration-format": "^2.2.3",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
