--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^6.0.8",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.0.8",
+    "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.24",
     "@types/styled-components-react-native": "^5.1.3",
     "apollo-upload-client": "^17.0.0",
@@ -34,8 +35,10 @@
     "expo-server-sdk": "^3.6.0",
     "expo-sms": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "graphql": "^16.3.0",
-    "lottie-react-native": "5.0.1",
+    "lottie-ios": "3.1.8",
+    "lottie-react-native": "^5.0.1",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "react": "17.0.1",
@@ -56,15 +59,14 @@
     "styled-components-react-native": "^1.0.0",
     "subscriptions-transport-ws": "^0.9.19",
     "svg-path-properties": "^1.0.11",
-    "tslib": "^2.3.1",
-    "expo-updates": "~0.11.6"
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/apollo-upload-client": "^17.0.0",
     "@types/moment-duration-format": "^2.2.3",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "^0.67.4",
     "typescript": "~4.3.5"
   },
   "private": true
