--- a/app.json
+++ b/app.json
@@ -13,7 +13,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.chickenbumps.swith",
@@ -31,7 +33,10 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "notification": {
       "icon": "./assets/icon1.png",
       "color": "#311b92",
@@ -47,6 +52,11 @@
           "mode": "production"
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "34812edf-4df8-461e-aaec-6cac15754dd2"
+      }
+    }
   }
 }
