--- a/package.json
+++ b/package.json
@@ -10,50 +10,50 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@babel/preset-typescript": "^7.16.7",
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.0.8",
     "@react-navigation/drawer": "^6.0.8",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.0.8",
-    "@types/react-dom": "^18.0.0",
+    "@types/react-dom": "~18.0.0",
     "@types/styled-components": "^5.1.24",
     "@types/styled-components-react-native": "^5.1.3",
     "apollo-upload-client": "^17.0.0",
     "browser-image-compression": "^1.0.17",
     "browserslist": "^4.20.2",
-    "expo": "~44.0.6",
-    "expo-app-loading": "~1.3.0",
-    "expo-camera": "~12.1.2",
-    "expo-face-detector": "~11.1.3",
-    "expo-font": "~10.0.4",
-    "expo-image-picker": "~12.0.1",
-    "expo-keep-awake": "~10.0.1",
-    "expo-linear-gradient": "~11.0.3",
-    "expo-media-library": "~14.0.0",
-    "expo-notifications": "~0.14.0",
+    "expo": "^46.0.0",
+    "expo-app-loading": "~2.1.0",
+    "expo-camera": "~12.5.0",
+    "expo-face-detector": "~11.3.0",
+    "expo-font": "~10.2.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-keep-awake": "~10.2.0",
+    "expo-linear-gradient": "~11.4.0",
+    "expo-media-library": "~14.2.0",
+    "expo-notifications": "~0.16.1",
     "expo-server-sdk": "^3.6.0",
-    "expo-sms": "~10.1.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.6",
+    "expo-sms": "~10.2.0",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.7",
     "graphql": "^16.3.0",
     "lottie-ios": "3.1.8",
-    "lottie-react-native": "^5.0.1",
+    "lottie-react-native": "5.1.3",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-hook-form": "^7.28.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.18.7",
     "save": "^2.4.0",
     "styled-components": "^5.3.5",
     "styled-components-react-native": "^1.0.0",
@@ -62,12 +62,12 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.6",
     "@types/apollo-upload-client": "^17.0.0",
     "@types/moment-duration-format": "^2.2.3",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "^0.67.4",
-    "typescript": "~4.3.5"
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
